Changes to Mailer, stats